--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "chalk": "^5.3.0",
+    "cheerio": "^1.0.0-rc.12",
     "chromadb": "^1.5.2",
     "common-tags": "^1.8.2",
     "dotenv": "^16.3.1",
