--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.3.1",
     "json-to-plain-text": "^1.1.2",
     "langchain": "^0.0.160",
+    "pdf-lib": "^1.17.1",
     "prettier": "^3.0.3",
     "stdio": "^2.1.1",
     "tsx": "^3.12.7",
